# bacon

./: .gitignore  Actor.hs  Database.hs  Main.hs  Movie.hs  bacon.cabal  cabal.sandbox.config  stack.yaml  tom_hanks.html
app/: Main.hs
src/: Bacon.hs
