name:                bacon
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/noahzgordon/bacon#readme
license:             BSD3
license-file:        LICENSE
author:              Noah Gordon
maintainer:          noahzacharygordon@gmail.com
copyright:           2017 Noah Gordon
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bacon, Actor, Database, Movie
  build-depends:       base >= 4.8 && < 5
                     , hxt <= 9.3.1.15
                     , hxt-http <= 9.1.5.2
                     , safe
                     , hxt-tagsoup <= 9.1.3
                     , HandsomeSoup <= 0.4.2
                     , HTTP >= 4000.3.1
                     , haskell-neo4j-client >= 0.1.5.0
                     , text >= 1.2.2.0
                     , unordered-containers >= 0.2.5.1
                     , bytestring >= 0.10.4.0
  default-language:    Haskell2010

executable bacon-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bacon
  default-language:    Haskell2010

test-suite bacon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bacon
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/noahzgordon/bacon
